# SkiLoadLab

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  reproducibility_issue.md
.github/workflows/: ci.yml
data/example/: runs_final_example.csv  runs_with_hr_example.csv
docs/: METHODS.md  reproducibility.md
paper/: paper.md
paper/bench/: benchmark_demo.json  benchmark_demo.md
paper/manuscript/: manuscript.md
paper/notes/: limitations.md  methods_outline.md  reproducibility.md
paper/tables/: variables.md
scripts/: alpha_sweep.py  benchmark_demo.sh  make_figures.py
skiloadlab/: core_model.py  core_sweep.py  core_viz.py
skiloadlab/cli/: alpha_sweep.py  combine.py  make_figures.py
src/features/: elevation_sampler.py
src/io/: gpx_loader.py
src/model/: combined_load.py
src/segmentation/: run_segmentation.py
tests/: conftest.py  test_alpha_sweep.py  test_combined_load.py  test_make_figures.py
